<resources>
    <string name="app_name">MECCURATOR</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_view_art_listings">My Listing</string>
    <string name="viewListings">My Listings</string>
    <string name="title_activity_view_item_bids">Bids</string>
    <string-array name="listingChoices">
        <item>All Items</item>
        <item>Available Items</item>
        <item>Bidded Items</item>
        <item>Borrowed Items</item>
    </string-array>

    <string name="contact_info"> Contact Info </string>
    <string name="title_activity_view_item">Item</string>
    <string name="new_item"> + Add a New Item </string>
    <string name="view_bids">View Bids</string>
    <string name="title">Title</string>
    <string name="save_item">Save</string>
    <string name="artist">Artist:</string>
    <string name="Title">Title:</string>
    <string name="cancel">Cancel Photo</string>

    <string name="dimensionUnits">cm</string>
    <string name="title_activity_add_new_item">AddNewItemActivity</string>
    <string name="dimensions">Dimensions</string>
    <string name="dimensionLength">Length:</string>
    <string name="dimensionWidth">Width:</string>
    <string name="minprice">Starting Bid: $</string>
    <string name="description">Description:</string>
    <string name="Status"> Status: </string>
    <string name="newItemStatus">Available</string>

    <string name="bid">Bid Offered: </string>
    <string name="bidder_info">Bidder Info</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="delete_item">Delete</string>
    <string name="homeDescription">Rent fascinating pieces of art locally\u0021</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="item_bids">Item Bids</string>

    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="edit_info">Edit User</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_hint">### ### ####</string>
    <string name="save_user">Save</string>
    <string name="user">Username</string>

    <string name="title_activity_add_new_bid">AddNewBidActivity</string>
    <string name="title_activity_view_my_bids">ViewMyBidsActivity</string>
    <string name="title_activity_view_notifications">My Notifications</string>

    <string name="title_activity_view_login">ViewLoginActivity</string>
    <string name="slogan">Discover new art!</string>
    <string name="enter_username">Enter Username:</string>
    <string name="login">Login</string>
    <string name="title_activity_add_new_user">AddNewUserActivity</string>
    <string name="email">Email:</string>
    <string name="email_hint">abc@hotmail.com</string>
    <string name="SignUp">Sign Up</string>

    <string name="title_activity_borrowed_items">My Borrowed Items</string>
    <string name="AppTitle">MECCA ART</string>
    <string name="title_activity_view_search">ViewSearchActivity</string>

    <string name="title_activity_search_results">Search Results</string>
    <string name="place_bid">Place Bid</string>
    <string name="title_activity_edit_bid_status">EditBidStatusActivity</string>
    <string name="enterBid">Raise Bid: </string>
    <string name="enterSearch">Search text</string>
    <string name="hello">Hello,</string>
    <string name="user1">User1</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="signup">Sign Up</string>

    <string name="title_activity_place_picker">PlacePickerActivity</string>
    <string name="title_activity_view_watch_list">ViewWatchListActivity</string>
    <string name="watchlist">Watch List</string>
    <string name="title_activity_view_meetup_location">ViewMeetupLocationActivity</string>
    <string name="dialog_title">Delete Artist?</string>
    <string name="dialog_message">Do you want to delete this artist from your watch list?</string>
    <string name="ok">Delete</string>

</resources>