<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mecca.meccurator.AddNewBidActivity"
    tools:showIn="@layout/activity_add_new_bid2"
    android:orientation="vertical">


    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:gravity="center"
        android:focusable="false"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="30dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterArtist"
        android:hint="@string/artist"
        android:focusable="false"
        android:gravity="center"
        android:inputType="text"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="241dp"
        android:layout_height="125dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:background="@color/pictureColor"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dimensions"
            android:id="@+id/viewDimensions"
            android:layout_weight="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterLengthDimensions"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/dimensionLength"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterWidthDimensions"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/dimensionWidth"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/viewDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterDescription"
        android:focusable="false"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:inputType="text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minprice"
            android:id="@+id/viewMinPrice" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterMinPrice"
            android:focusable="false"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Status"
            android:id="@+id/viewStatus"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/newItemStatus"
            android:id="@+id/enterStatus"
            android:layout_weight="0.19" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterRate"
            android:hint="@string/enterBid"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_bid"
            android:id="@+id/item_bids"
            android:onClick="saveBidButton"
            android:layout_marginTop="10dp"
            android:background="@color/buttonColor"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
