<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/artTitle"
            android:layout_width="0dp"
            android:layout_weight="0.34"
            android:layout_height="fill_parent"
            android:textSize="16sp"
            android:hint="@string/Title"
            android:gravity="left"
            />

        <TextView
            android:id="@+id/artPerson"
            android:layout_width="0dp"
            android:layout_weight="0.34"
            android:layout_height="fill_parent"
            android:textSize="16sp"
            android:hint="@string/username"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/artStatus"
            android:layout_width="0dp"
            android:layout_weight="0.34"
            android:layout_height="fill_parent"
            android:textSize="16sp"
            android:hint="@string/Status"
            android:gravity="right"/>

    </LinearLayout>

    <TextView
        android:id="@+id/artDescription"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="16sp"
        android:hint="@string/description"/>

</LinearLayout>
