<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mecca.meccurator.AddNewUserActivity"
    tools:showIn="@layout/activity_add_new_user"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColor"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        android:textSize="50sp"
        android:text="@string/SignUp"
        android:textAllCaps="true" />

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="text"
        android:textAlignment="center"
        android:id="@+id/enterUsername"
        android:hint="@string/username" />

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:id="@+id/enterEmail"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:text="@string/save_item"
        android:id="@+id/saveUser"
        android:onClick="saveUser"
        android:background="@color/buttonColor"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>